// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Text Body 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2d2832",
        "fontFamily": undefined,
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "textAlign": undefined,
        "textDecorationLine": "none",
      }
    }
  >
    Sample Text
  </Text>
</View>
`;

exports[`Storyshots Atoms/Text Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2d2832",
        "fontFamily": undefined,
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "textAlign": undefined,
        "textDecorationLine": "none",
      }
    }
  >
    Sample Text
  </Text>
</View>
`;

exports[`Storyshots Atoms/Text Heading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2d2832",
        "fontFamily": undefined,
        "fontSize": 28,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "textAlign": undefined,
        "textDecorationLine": "none",
      }
    }
  >
    Sample Text
  </Text>
</View>
`;

exports[`Storyshots Atoms/Text Label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2d2832",
        "fontFamily": undefined,
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "textAlign": undefined,
        "textDecorationLine": "none",
      }
    }
  >
    Sample Text
  </Text>
</View>
`;

exports[`Storyshots Atoms/Text Quote 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2d2832",
        "fontFamily": undefined,
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "textAlign": undefined,
        "textDecorationLine": "none",
      }
    }
  >
    Sample Text
  </Text>
</View>
`;

exports[`Storyshots Atoms/Text SubHeading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2d2832",
        "fontFamily": undefined,
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "textAlign": undefined,
        "textDecorationLine": "none",
      }
    }
  >
    Sample Text
  </Text>
</View>
`;
